argo/overlays/local/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: argo-route
  namespace: argocd
spec:
  parentRefs:
    - name: http
      namespace: traefik
  hostnames:
    - "argo.localhost"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: "/"
      backendRefs:
        - name: argocd-server
          port: 80
